--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Css Styles -->
     <link rel="stylesheet" href="styles/styles.css" />
-    <!-- Google Font -->
+    <!-- Google Font & CSS custom style-->
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+
+      .grid-cols-5 > div:nth-child(5n + 2),
+      .grid-cols-5 > div:nth-child(5n + 3),
+      .grid-cols-5 > div:nth-child(5n + 4),
+      .grid-cols-5 > div:nth-child(5n + 5) {
+        background-color: #f7f8f8;
+        border: none;
+        border-radius: 5px;
+      }
     </style>
   </head>
   <body class="w-10/12 mx-auto">
@@ -134,7 +143,8 @@
     </header>
     <main>
       <!-- Best-Offer Section -->
-      <section class="flex justify-between ">
+      <section class="flex justify-between">
+        <!-- Offer one -->
         <div class="flex">
           <div
             class="inverted-rounded-corner flex flex-col justify-center items-center rounded-l-2xl"
@@ -154,6 +164,7 @@
             Coupon Code
           </div>
         </div>
+        <!-- Offer two -->
         <div class="flex">
           <div
             class="inverted-rounded-corner3 flex flex-col justify-center items-center rounded-l-2xl"
@@ -173,6 +184,181 @@
             Coupon Code
           </div>
         </div>
+      </section>
+      <button class="btn bg-white border-[#1DD100] mx-auto flex my-16">
+        <span class="text-[#1DD100]">See All Offers</span>
+      </button>
+      <!-- P.H Paribahan Section -->
+      <section>
+        <div>
+          <h2 class="text-center text-4xl font-bold mb-6">P.H Paribahan</h2>
+          <h5 class="text-center">
+            Yes, you can run unit tests and view the results directly within the
+            app. The integrated <br />
+            testing features allow for a streamlined .
+          </h5>
+        </div>
+        <!-- Tour Destination setting -->
+        <div class="flex justify-center items-center">
+          <div
+            class="inverted-rounded-corner5 rounded-l-2xl w-3/4 p-8 h-fit flex-1"
+          >
+            <div class="flex justify-between">
+              <div class="flex gap-3">
+                <img class="w-fit" src="./images/bus-logo.png" alt="" />
+                <div>
+                  <h2 class="font-bold text-4xl">Greenline Paribahan</h2>
+                  <p>Coach-009-WEB ! AC_Business</p>
+                </div>
+              </div>
+              <div>
+                <a
+                  class="flex gap-2 items-center justify-center p-4 w-fit rounded-lg bg-[#e8ffe3] border-[#1DD100]"
+                >
+                  <img src="./images/seat-green.png" alt="" />
+                  <span class="text-[#1DD100] font-bold">40 Seats left</span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <div
+                class="flex justify-between mt-5 mx-10 pb-6 border-dashed border-b-2 border-[#a9abb0]"
+              >
+                <p>Route</p>
+                <p>Dhaka - Sylhet</p>
+              </div>
+              <div
+                class="flex justify-between mt-5 mx-10 pb-6 border-dashed border-b-2 border-[#a9abb0]"
+              >
+                <p>Departure Time</p>
+                <p>9:00 PM</p>
+              </div>
+              <div class="flex justify-around mt-5 mx-10 pb-6">
+                <button class="btn">Boarding Point - Laxmipur</button>
+                <button class="btn">Dropping Point - Bogura</button>
+                <button class="btn">Est. Time - 11 Hour</button>
+              </div>
+            </div>
+
+            <div
+              class="w-[1px] h-full border-dashed border-2 border-[#1DD100] absolute right-[-2px]"
+            ></div>
+          </div>
+
+          <div
+            class="inverted-rounded-corner6 flex flex-col justify-center items-center rounded-r-2xl w-1/4 h-full"
+          >
+            <img src="images/fare.png" alt="" />
+            <p class="text-3xl font-bold my-2">550 Taka</p>
+            <p>Per Seat</p>
+          </div>
+        </div>
+      </section>
+      <!-- Ticket Booking Section -->
+      <section class="flex mt-10">
+        <!-- Left Side -->
+        <div class="w-[60%]">
+          <div
+            class="mt-5 mx-10 pb-6 border-dashed border-b-2 border-[#a9abb0]"
+          >
+            <div class=" ">
+              <p>Select Your Seat</p>
+            </div>
+          </div>
+
+          <div
+            class="flex justify-between mt-5 mx-10 pb-6 border-dashed border-b-2 border-[#a9abb0]"
+          >
+            <div class="flex items-center gap-2">
+              <img src="./images/seat-gray.png" alt="" />
+              <p>Available</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img src="./images/seat-green-filled.png" alt="" />
+              <p>Selected</p>
+            </div>
+          </div>
+          <div class="flex justify-end mr-10">
+            <button class="btn my-5">
+              <img src="./images/Vector.svg" alt="" />
+            </button>
+          </div>
+          <!-- GRID Template -->
+          <div class="grid grid-cols-5 gap-4">
+            <!-- Row 1 -->
+            <div class="p-4 text-center">A</div>
+            <div class="p-4 text-center">A1</div>
+            <div class="p-4 text-center">A2</div>
+            <div class="p-4 text-center">A3</div>
+            <div class="p-4 text-center">A4</div>
+
+            <!-- Row 2 -->
+            <div class="p-4 text-center">B</div>
+            <div class="p-4 text-center">B1</div>
+            <div class="p-4 text-center">B2</div>
+            <div class="p-4 text-center">B3</div>
+            <div class="p-4 text-center">B4</div>
+
+            <!-- Row 3 -->
+            <div class="p-4 text-center">C</div>
+            <div class="p-4 text-center">C1</div>
+            <div class="p-4 text-center">C2</div>
+            <div class="p-4 text-center">C3</div>
+            <div class="p-4 text-center">C4</div>
+
+            <!-- Row 4 -->
+            <div class="p-4 text-center">D</div>
+            <div class="p-4 text-center">D1</div>
+            <div class="p-4 text-center">D2</div>
+            <div class="p-4 text-center">D3</div>
+            <div class="p-4 text-center">D4</div>
+
+            <!-- Row 5 -->
+            <div class="p-4 text-center">E</div>
+            <div class="p-4 text-center">E1</div>
+            <div class="p-4 text-center">E2</div>
+            <div class="p-4 text-center">E3</div>
+            <div class="p-4 text-center">E4</div>
+
+            <!-- Row 6 -->
+            <div class="p-4 text-center">F</div>
+            <div class="p-4 text-center">F1</div>
+            <div class="p-4 text-center">F2</div>
+            <div class="p-4 text-center">F3</div>
+            <div class="p-4 text-center">F4</div>
+
+            <!-- Row 7 -->
+            <div class="p-4 text-center">G</div>
+            <div class="p-4 text-center">G1</div>
+            <div class="p-4 text-center">G2</div>
+            <div class="p-4 text-center">G3</div>
+            <div class="p-4 text-center">G4</div>
+
+            <!-- Row 8 -->
+            <div class="p-4 text-center">H</div>
+            <div class="p-4 text-center">H1</div>
+            <div class="p-4 text-center">H2</div>
+            <div class="p-4 text-center">H3</div>
+            <div class="p-4 text-center">H4</div>
+
+            <!-- Row 9 -->
+            <div class="p-4 text-center">I</div>
+            <div class="p-4 text-center">I1</div>
+            <div class="p-4 text-center">I2</div>
+            <div class="p-4 text-center">I3</div>
+            <div class="p-4 text-center">I4</div>
+
+            <!-- Row 10 -->
+            <div class="p-4 text-center">J</div>
+            <div class="p-4 text-center">J1</div>
+            <div class="p-4 text-center">J2</div>
+            <div class="p-4 text-center">J3</div>
+            <div class="p-4 text-center">J4</div>
+          </div>
+        </div>
+
+        <!-- Right Side -->
+        <div class="w-[40%] border-2 border-solid border-red-800">2</div>
       </section>
     </main>
     <footer></footer>
