--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 
-      .grid-cols-5 > div:nth-child(5n + 2),
-      .grid-cols-5 > div:nth-child(5n + 3),
-      .grid-cols-5 > div:nth-child(5n + 4),
-      .grid-cols-5 > div:nth-child(5n + 5) {
-        background-color: #f7f8f8;
+      .grid-cols-4 > div:nth-child(4n + 1),
+      .grid-cols-4 > div:nth-child(4n + 2),
+      .grid-cols-4 > div:nth-child(4n + 3),
+      .grid-cols-4 > div:nth-child(4n + 4) {
+        background-color: #f7f8f8; 
         border: none;
         border-radius: 5px;
+        cursor: pointer;
       }
     </style>
   </head>
-  <body class="w-10/12 mx-auto">
-    <header>
+  <body>
+    <header class="w-10/12 mx-auto">
       <!-- Navbar -->
       <nav>
         <div class="navbar bg-base-100">
@@ -141,7 +142,8 @@
         </div>
       </section>
     </header>
-    <main>
+
+    <main class="w-10/12 mx-auto">
       <!-- Best-Offer Section -->
       <section class="flex justify-between">
         <!-- Offer one -->
@@ -261,7 +263,7 @@
           <div
             class="mt-5 mx-10 pb-6 border-dashed border-b-2 border-[#a9abb0]"
           >
-            <div class=" ">
+            <div>
               <p>Select Your Seat</p>
             </div>
           </div>
@@ -283,84 +285,231 @@
               <img src="./images/Vector.svg" alt="" />
             </button>
           </div>
-          <!-- GRID Template -->
-          <div class="grid grid-cols-5 gap-4">
-            <!-- Row 1 -->
-            <div class="p-4 text-center">A</div>
-            <div class="p-4 text-center">A1</div>
-            <div class="p-4 text-center">A2</div>
-            <div class="p-4 text-center">A3</div>
-            <div class="p-4 text-center">A4</div>
+          <div class="grid grid-cols-[50px_auto]">
+            <div class="grid grid-cols-1 gap-4">
+              <div>A</div>
+              <div>B</div>
+              <div>C</div>
+              <div>D</div>
+              <div>E</div>
+              <div>F</div>
+              <div>G</div>
+              <div>H</div>
+              <div>I</div>
+              <div>J</div>
+            </div>
+            <!-- GRID Template -->
+            <div class="grid grid-cols-4 gap-4 bg-">
+              <!-- Row 1 -->
+              <div id="A1" class="ticket p-4 text-center">A1</div>
+              <div id="A2" class="ticket p-4 text-center">A2</div>
+              <div id="A3" class="ticket p-4 text-center">A3</div>
+              <div id="A4" class="ticket p-4 text-center">A4</div>
 
-            <!-- Row 2 -->
-            <div class="p-4 text-center">B</div>
-            <div class="p-4 text-center">B1</div>
-            <div class="p-4 text-center">B2</div>
-            <div class="p-4 text-center">B3</div>
-            <div class="p-4 text-center">B4</div>
+              <!-- Row 2 -->
+              <div id="B1" class="ticket p-4 text-center">B1</div>
+              <div id="B2" class="ticket p-4 text-center">B2</div>
+              <div id="B3" class="ticket p-4 text-center">B3</div>
+              <div id="B4" class="ticket p-4 text-center">B4</div>
 
-            <!-- Row 3 -->
-            <div class="p-4 text-center">C</div>
-            <div class="p-4 text-center">C1</div>
-            <div class="p-4 text-center">C2</div>
-            <div class="p-4 text-center">C3</div>
-            <div class="p-4 text-center">C4</div>
+              <!-- Row 3 -->
+              <div id="C1" class="ticket p-4 text-center">C1</div>
+              <div id="C2" class="ticket p-4 text-center">C2</div>
+              <div id="C3" class="ticket p-4 text-center">C3</div>
+              <div id="C4" class="ticket p-4 text-center">C4</div>
 
-            <!-- Row 4 -->
-            <div class="p-4 text-center">D</div>
-            <div class="p-4 text-center">D1</div>
-            <div class="p-4 text-center">D2</div>
-            <div class="p-4 text-center">D3</div>
-            <div class="p-4 text-center">D4</div>
+              <!-- Row 4 -->
+              <div id="D1" class="ticket p-4 text-center">D1</div>
+              <div id="D2" class="ticket p-4 text-center">D2</div>
+              <div id="D3" class="ticket p-4 text-center">D3</div>
+              <div id="D4" class="ticket p-4 text-center">D4</div>
 
-            <!-- Row 5 -->
-            <div class="p-4 text-center">E</div>
-            <div class="p-4 text-center">E1</div>
-            <div class="p-4 text-center">E2</div>
-            <div class="p-4 text-center">E3</div>
-            <div class="p-4 text-center">E4</div>
+              <!-- Row 5 -->
+              <div id="E1" class="ticket p-4 text-center">E1</div>
+              <div id="E2" class="ticket p-4 text-center">E2</div>
+              <div id="E3" class="ticket p-4 text-center">E3</div>
+              <div id="E4" class="ticket p-4 text-center">E4</div>
 
-            <!-- Row 6 -->
-            <div class="p-4 text-center">F</div>
-            <div class="p-4 text-center">F1</div>
-            <div class="p-4 text-center">F2</div>
-            <div class="p-4 text-center">F3</div>
-            <div class="p-4 text-center">F4</div>
+              <!-- Row 6 -->
+              <div id="F1" class="ticket p-4 text-center">F1</div>
+              <div id="F2" class="ticket p-4 text-center">F2</div>
+              <div id="F3" class="ticket p-4 text-center">F3</div>
+              <div id="F4" class="ticket p-4 text-center">F4</div>
 
-            <!-- Row 7 -->
-            <div class="p-4 text-center">G</div>
-            <div class="p-4 text-center">G1</div>
-            <div class="p-4 text-center">G2</div>
-            <div class="p-4 text-center">G3</div>
-            <div class="p-4 text-center">G4</div>
+              <!-- Row 7 -->
+              <div id="G1" class="ticket p-4 text-center">G1</div>
+              <div id="G2" class="ticket p-4 text-center">G2</div>
+              <div id="G3" class="ticket p-4 text-center">G3</div>
+              <div id="G4" class="ticket p-4 text-center">G4</div>
 
-            <!-- Row 8 -->
-            <div class="p-4 text-center">H</div>
-            <div class="p-4 text-center">H1</div>
-            <div class="p-4 text-center">H2</div>
-            <div class="p-4 text-center">H3</div>
-            <div class="p-4 text-center">H4</div>
+              <!-- Row 8 -->
+              <div id="H1" class="ticket p-4 text-center">H1</div>
+              <div id="H2" class="ticket p-4 text-center">H2</div>
+              <div id="H3" class="ticket p-4 text-center">H3</div>
+              <div id="H4" class="ticket p-4 text-center">H4</div>
 
-            <!-- Row 9 -->
-            <div class="p-4 text-center">I</div>
-            <div class="p-4 text-center">I1</div>
-            <div class="p-4 text-center">I2</div>
-            <div class="p-4 text-center">I3</div>
-            <div class="p-4 text-center">I4</div>
+              <!-- Row 9 -->
+              <div id="I1" class="ticket p-4 text-center">I1</div>
+              <div id="I2" class="ticket p-4 text-center">I2</div>
+              <div id="I3" class="ticket p-4 text-center">I3</div>
+              <div id="I4" class="ticket p-4 text-center">I4</div>
 
-            <!-- Row 10 -->
-            <div class="p-4 text-center">J</div>
-            <div class="p-4 text-center">J1</div>
-            <div class="p-4 text-center">J2</div>
-            <div class="p-4 text-center">J3</div>
-            <div class="p-4 text-center">J4</div>
+              <!-- Row 10 -->
+              <div id="J1" class="ticket p-4 text-center">J1</div>
+              <div id="J2" class="ticket p-4 text-center">J2</div>
+              <div id="J3" class="ticket p-4 text-center">J3</div>
+              <div id="J4" class="ticket p-4 text-center">J4</div>
+            </div>
           </div>
         </div>
 
         <!-- Right Side -->
-        <div class="w-[40%] border-2 border-solid border-red-800">2</div>
+        <div class="w-[40%]">
+          <div
+            class="mt-5 mx-10 pb-3 border-dashed border-b-2 border-[#a9abb0]"
+          >
+            <div>
+              <p>Select Your Seat</p>
+            </div>
+          </div>
+          <div>
+            <div
+              class="mt-10 mx-10 pb-3 flex justify-between border-dashed border-b-2 border-[#a9abb0]"
+            >
+              <p>
+                Seat
+                <sup class="bg-[#1DD100] p-[1px] rounded-sm text-white">02</sup>
+              </p>
+              <p>Class</p>
+              <p>Price</p>
+            </div>
+            <div class="mx-10 pb-3 flex justify-between">
+              <p>C2</p>
+              <p>Economoy</p>
+              <p>550</p>
+            </div>
+            <div class="mx-10 pb-3 flex justify-between">
+              <p>C2</p>
+              <p>Economoy</p>
+              <p>550</p>
+            </div>
+            <hr class="mx-10" />
+            <div class="mt-5 mx-10 pb-3 flex justify-between">
+              <p>Total Price</p>
+              <p>BDT 1100</p>
+            </div>
+            <label
+              class="input input-bordered flex items-center gap-2 p-7 mx-20"
+            >
+              <input type="text" class="grow" placeholder="Search" />
+              <button class="btn h-fit">Apply</button>
+            </label>
+            <div class="mt-5 mx-10 pb-3 flex justify-between">
+              <p>Grand Total</p>
+              <p>BDT 1100</p>
+            </div>
+            <div class="mx-10 pb-3">
+              <p class="mb-3 mt-5">Passenger Name*</p>
+              <input
+                type="text"
+                placeholder="Enter your name"
+                class="input input-bordered w-full max-w-xl"
+              />
+              <p class="mb-3 mt-5">Phone Number*</p>
+              <input
+                type="number"
+                placeholder="Enter your phone number"
+                class="input input-bordered w-full max-w-xl"
+              />
+              <p class="mb-3 mt-5">Email ID</p>
+              <input
+                type="email"
+                placeholder="Enter your email id"
+                class="input input-bordered w-full max-w-xl"
+              />
+              <button class="btn w-full mt-10 bg-green-600 text-white">
+                Next
+              </button>
+              <div class="flex justify-between mt-5">
+                <p>Terms and Conditions</p>
+                <p>Cancellation Policy</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
-    <footer></footer>
+
+    <footer class="footer bg-neutral text-neutral-content p-10">
+      <aside>
+        <svg
+          width="50"
+          height="50"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          class="fill-current"
+        >
+          <path
+            d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"
+          ></path>
+        </svg>
+        <p>
+          ACME Industries Ltd.
+          <br />
+          Providing reliable tech since 1992
+        </p>
+      </aside>
+      <nav>
+        <h6 class="footer-title">Social</h6>
+        <div class="grid grid-flow-col gap-4">
+          <a>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              class="fill-current"
+            >
+              <path
+                d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+              ></path>
+            </svg>
+          </a>
+          <a>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              class="fill-current"
+            >
+              <path
+                d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
+              ></path>
+            </svg>
+          </a>
+          <a>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              class="fill-current"
+            >
+              <path
+                d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
+              ></path>
+            </svg>
+          </a>
+        </div>
+      </nav>
+    </footer>
+    <script>
+      const divs = document.querySelectorAll('.ticket');
+      
+    </script>
+    <script src="utility.js"></script>
   </body>
 </html>
