--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       .grid-cols-4 > div:nth-child(4n + 2),
       .grid-cols-4 > div:nth-child(4n + 3),
       .grid-cols-4 > div:nth-child(4n + 4) {
-        background-color: #f7f8f8; 
+        background-color: #f7f8f8;
         border: none;
         border-radius: 5px;
         cursor: pointer;
@@ -218,7 +218,9 @@
                   class="flex gap-2 items-center justify-center p-4 w-fit rounded-lg bg-[#e8ffe3] border-[#1DD100]"
                 >
                   <img src="./images/seat-green.png" alt="" />
-                  <span class="text-[#1DD100] font-bold">40 Seats left</span>
+                  <span class="text-[#1DD100] font-bold">
+                    <span id="total-seat-left">40</span> Seats left</span
+                  >
                 </a>
               </div>
             </div>
@@ -378,25 +380,20 @@
             >
               <p>
                 Seat
-                <sup class="bg-[#1DD100] p-[1px] rounded-sm text-white">02</sup>
+                <sup
+                  id="sup-ticket-string"
+                  class="bg-[#1DD100] p-[1px] rounded-sm text-white"
+                  >00</sup
+                >
               </p>
               <p>Class</p>
               <p>Price</p>
             </div>
-            <div class="mx-10 pb-3 flex justify-between">
-              <p>C2</p>
-              <p>Economoy</p>
-              <p>550</p>
-            </div>
-            <div class="mx-10 pb-3 flex justify-between">
-              <p>C2</p>
-              <p>Economoy</p>
-              <p>550</p>
-            </div>
+            <div id="ticket-lists" class="mx-10 pb-3"></div>
             <hr class="mx-10" />
             <div class="mt-5 mx-10 pb-3 flex justify-between">
               <p>Total Price</p>
-              <p>BDT 1100</p>
+              <p>BDT <span id="total-price">00</span></p>
             </div>
             <label
               class="input input-bordered flex items-center gap-2 p-7 mx-20"
@@ -414,22 +411,48 @@
                 type="text"
                 placeholder="Enter your name"
                 class="input input-bordered w-full max-w-xl"
+                required
               />
               <p class="mb-3 mt-5">Phone Number*</p>
               <input
                 type="number"
                 placeholder="Enter your phone number"
                 class="input input-bordered w-full max-w-xl"
+                required
               />
               <p class="mb-3 mt-5">Email ID</p>
               <input
                 type="email"
                 placeholder="Enter your email id"
                 class="input input-bordered w-full max-w-xl"
+                required
               />
-              <button class="btn w-full mt-10 bg-green-600 text-white">
+              <!-- Open the modal using ID.showModal() method -->
+              <button
+                class="btn w-full mt-10 bg-green-600 text-white"
+                onclick="my_modal_1.showModal()"
+              >
                 Next
               </button>
+              <dialog id="my_modal_1" class="modal">
+                <div class="modal-box">
+                  <img class="mx-auto" src="./images/success.png" alt="" />
+                  <p class="py-4 text-center">SUCCESS</p>
+                  <p class="text-center">
+                    <span class="font-bold">
+                      Thank you for Booking Our Bus Seats. We are working hard to
+                    find the best service and deals for you.
+                    </span> <br> Shortly you will
+                    find a confirmation in your email.
+                  </p>
+                  <div class="modal-action">
+                    <form method="dialog">
+                      <!-- if there is a button in form, it will close the modal -->
+                      <button class="btn">Close</button>
+                    </form>
+                  </div>
+                </div>
+              </dialog>
               <div class="flex justify-between mt-5">
                 <p>Terms and Conditions</p>
                 <p>Cancellation Policy</p>
@@ -507,8 +530,7 @@
       </nav>
     </footer>
     <script>
-      const divs = document.querySelectorAll('.ticket');
-      
+      const divs = document.querySelectorAll(".ticket");
     </script>
     <script src="utility.js"></script>
   </body>
